Comecei a escrever o conteúdo

--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 <body>
     <main>
         <header>
-            <h1>Título do Site</h1>
+            <h1>Cursos Grátis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto Artigo 001</p>
+            <h2>Curso de HTML5 com CSS3</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit perspiciatis libero ex, maxime quisquam ipsa, corrupti enim consequuntur non cumque modi quod quis laborum? Rerum nulla dolor ad obcaecati distinctio!</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto Artigo 002</p>
+            <h2>Curos de JavaScript</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa illum recusandae tempora repellendus voluptas nesciunt libero tenetur laborum necessitatibus! Sed deserunt quasi possimus minus quae reprehenderit deleniti dolore suscipit corporis.</p>
         </article>
     </main>
 </body>
